--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lodash": "^4.17.21",
     "react": "17.x",
     "react-dom": "17.x",
+    "redux-logger": "^3.0.6",
     "store": "^2.0.12",
     "umi": "^3.5.20"
   },
@@ -54,6 +55,7 @@
     "@types/classnames": "^2.3.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/redux-logger": "^3.0.9",
     "@types/store": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
