--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     }
   },
   "dependencies": {
+    "@ant-design/icons": "^4.0.2",
     "@ant-design/pro-layout": "^6.5.0",
+    "antd": "^4.0.0",
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
     "dva-model-extend": "^0.1.2",
@@ -60,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "@umijs/preset-react": "1.x",
+    "@umijs/preset-ui": "^2.2.9",
     "@umijs/test": "^3.5.20",
     "babel-plugin-import": "^1.13.3",
     "commitizen": "^4.2.4",
